@@ -1,0 +1,38 @@
+(*****************************************************************************)
+(*  Caradoc: a PDF parser and validator                                      *)
+(*  Copyright (C) 2017 Guillaume Endignoux                                   *)
+(*                                                                           *)
+(*  This program is free software; you can redistribute it and/or modify     *)
+(*  it under the terms of the GNU General Public License version 2 as        *)
+(*  published by the Free Software Foundation.                               *)
+(*                                                                           *)
+(*  This program is distributed in the hope that it will be useful,          *)
+(*  but WITHOUT ANY WARRANTY; without even the implied warranty of           *)
+(*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            *)
+(*  GNU General Public License for more details.                             *)
+(*                                                                           *)
+(*  You should have received a copy of the GNU General Public License along  *)
+(*  with this program; if not, write to the Free Software Foundation, Inc.,  *)
+(*  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.              *)
+(*****************************************************************************)
+
+
+module LZW : sig
+
+  (*   Decompress a LZW stream
+       Args    :
+       - input string
+       Returns :
+       - decoded string or None if decoding error
+  *)
+  val decode : string -> string option
+
+  (*   Compress a LZW stream
+       Args    :
+       - input string
+       Returns :
+       - encoded string
+  *)
+  val encode : string -> string
+
+end
